# glfw-based-gui

./: .gitignore  CMakeLists.txt  main.cpp
resources/: cgui_tri_frag.fs  cgui_tri_geom.gs  cgui_tri_vert.vs  glfw_based_gui.desktop  recources.rc  resources.hpp  resources.rc
resources/icons/macos/: icon.icns
window_handler/: CGUIMainWindow.cpp  CGUIMainWindow.hpp  CMakeLists.txt
window_handler/cgui_datatypes/: CGUIDataTypes.cpp  CGUIDataTypes.hpp  CMakeLists.txt
window_handler/debug_handler/: CGUIDebugHandler.cpp  CGUIDebugHandler.hpp  CMakeLists.txt
window_handler/glad/: CMakeLists.txt
window_handler/glm/: CMakeLists.txt
window_handler/object_renderer/: CGUIObjectRenderer.cpp  CGUIObjectRenderer.hpp  CGUIVertexSpecification.cpp  CGUIVertexSpecification.hpp  CMakeLists.txt
window_handler/object_renderer/ebo_handler/: CGUIEBOHandler.cpp  CGUIEBOHandler.hpp  CMakeLists.txt
window_handler/object_renderer/vao_handler/: CGUIVAOHandler.cpp  CGUIVAOHandler.hpp  CMakeLists.txt
window_handler/object_renderer/vbo_handler/: CGUIVBOHandler.cpp  CGUIVBOHandler.hpp  CMakeLists.txt
window_handler/protection/: CGUIProtection.cpp  CGUIProtection.hpp  CMakeLists.txt
window_handler/shader_compiler/: CGUIShaderCompiler.cpp  CGUIShaderCompiler.hpp  CMakeLists.txt
window_handler/vertex_specification/ebo_handler/: CGUIEBOHandler.cpp  CGUIEBOHandler.hpp
window_handler/vertex_specification/vao_handler/: CGUIVAOHandler.cpp  CGUIVAOHandler.hpp
window_handler/vertex_specification/vbo_handler/: CGUIVBOHandler.cpp  CGUIVBOHandler.hpp
